# mcp-api.net

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: launch.json
.github/workflows/: publish.yml
app/: invoices.py  liqpay.py  main.py  monobank.py
app/locales/: strings.json
app/static/css/: site.css
app/static/js/: site.js
app/templates/: _legal.html  agreement_project.html  agreement_sse.html  agreement_template.html  agreements.html  base.html  contacts.html  data_deletion.html  home.html  pay_invoice.html  pay_test.html  payment_result.html  pricing.html  privacy.html  services.html  terms.html  warranty.html
deploy/: _server_deploy.sh  deploy.sh
deploy/caddy/: mcp-api.net.caddy
