[project]
name = "mcp-api-net"
version = "0.1.0"
description = "Marketing site for mcp-api.net — consulting, integration, and managed services for making any API MCP-compatible."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Serhii Kirichko", email = "serhii.kirichko@gmail.com" },
]
license = { text = "Proprietary" }
keywords = ["mcp", "fastapi", "api", "integration"]
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "jinja2==3.1.4",
    "python-multipart==0.0.12",
    "pydantic==2.9.2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.urls]
Homepage = "https://mcp-api.net/"
Author = "https://setti.ai/"
Source = "https://github.com/SergeySetti"

[project.scripts]
mcp-api-net = "app.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 160
target-version = "py313"
